# VkAndroidTest

./: .clang-format  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment.glsl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/imgui/: imgui_imp_vulkan.cpp  imgui_impl_android.cpp
app/src/main/cpp/include/: vulkan_renderer.hpp
app/src/main/cpp/src/: main.cpp  vulkan_renderer.cpp
app/src/main/java/net/ayberkbilisim/vkandroidtest/: VkAndroidTestActivity.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
